<resources>

    <string name="app_name">Chat</string>

    <string name="menu_bottom_title_contacts">Contacts</string>
    <string name="menu_bottom_title_conversations">Conversations</string>
    <string name="menu_bottom_title_settings">Settings</string>

    <string name="app_bar_title_feed">Feed</string>
    <string name="app_bar_title_contacts">Contacts</string>
    <string name="app_bar_title_conversations">Conversations</string>
    <string name="app_bar_title_settings">Settings</string>

    <string name="widget_message_editor_hint">Enter message</string>

    <string name="open_source_licenses_title">Open Source Licenses</string>
    <string name="open_source_licenses_group_common">Common</string>
    <string name="open_source_licenses_group_android">Android</string>
    <string name="open_source_licenses_item_kotlin">Kotlin</string>
    <string name="open_source_licenses_item_android_support">Android Support</string>

    <string name="app_info_version_label">Version</string>
    <string name="app_info_version_code_label">Version Code</string>
    <string name="app_info_update_available_label">Update</string>
    <string name="app_info_app_store_id_label">App Store ID</string>
    <string name="app_info_license_label">License</string>
    <string name="app_info_source_code_label">Source Code</string>
    <string name="app_info_source_code_title">Application Source Code</string>

    <string name="contact_info_action_call">Call</string>
    <string name="contact_info_action_chat">Chat</string>
    <string name="contact_info_action_email">Email</string>
    <string name="contact_info_action_qr">QR Code</string>

    <string name="referral_title">Invite Friends</string>
    <string name="referral_message_hint">Invite Message</string>
    <string name="referral_invite_button">Invite</string>

</resources>
