<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/referralConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/spacing_horizontal_default"
        android:paddingEnd="@dimen/spacing_horizontal_default">

    <TextView
            android:id="@+id/referralTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:gravity="center_horizontal"
            android:text="@string/referral_title"
            android:textAppearance="@style/TextAppearance.Header.Secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/referralMessageTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:theme="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/referralTitleTextView">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/referralMessageTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/referral_message_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/referralInviteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:text="@string/referral_invite_button"
            android:theme="@style/Button.Accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/referralMessageTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>