<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/contactActionCallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_small"
            android:contentDescription="@string/cd_contact_info_actions_image"
            android:textAppearance="@style/TextAppearance.LabelHeader.Accent"
            android:drawableTint="@color/text_accent_color"
            android:text="@string/contact_info_action_call"
            android:padding="@dimen/spacing_small"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_contact_info_action_call"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/contactActionChatTextView"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
            android:id="@+id/contactActionChatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_small"
            android:contentDescription="@string/cd_contact_info_actions_image"
            android:textAppearance="@style/TextAppearance.LabelHeader.Accent"
            android:drawableTint="@color/text_accent_color"
            android:text="@string/contact_info_action_chat"
            android:padding="@dimen/spacing_small"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_contact_info_action_chat"
            app:layout_constraintStart_toEndOf="@+id/contactActionCallTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/contactActionEmailTextView"/>

    <TextView
            android:id="@+id/contactActionEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_small"
            android:contentDescription="@string/cd_contact_info_actions_image"
            android:textAppearance="@style/TextAppearance.LabelHeader.Accent"
            android:drawableTint="@color/text_accent_color"
            android:text="@string/contact_info_action_email"
            android:padding="@dimen/spacing_small"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_contact_info_action_email"
            app:layout_constraintStart_toEndOf="@+id/contactActionChatTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/contactActionQRCodeTextView"/>

    <TextView
            android:id="@+id/contactActionQRCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_small"
            android:contentDescription="@string/cd_contact_info_actions_image"
            android:textAppearance="@style/TextAppearance.LabelHeader.Accent"
            android:drawableTint="@color/text_accent_color"
            android:text="@string/contact_info_action_qr"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/spacing_small"
            android:drawableTop="@drawable/ic_contact_info_action_qr_code"
            app:layout_constraintStart_toEndOf="@+id/contactActionEmailTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>